--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"@babel/plugin-proposal-do-expressions": "^7.18.6",
 		"@types/animejs": "^3.1.7",
 		"@types/react-transition-group": "^4.4.5",
-		"@types/styled-components": "^5.1.26",
+		"@types/styled-components": "5.1.26",
 		"babel-plugin-styled-components": "^2.0.7",
 		"eslint": "8.37.0",
 		"eslint-config-airbnb": "^19.0.4",
@@ -40,6 +40,9 @@
 		"prettier": "^2.8.7"
 	},
 	"resolutions": {
-		"styled-components": "^5"
+		"styled-components": "^5",
+		"@types/react": "18.0.32",
+		"@types/react-dom": "18.0.11",
+		"@types/styled-components": "5.1.26"
 	}
 }
